fix z-index conflict

--- a/css/everlasting.css
+++ b/css/everlasting.css
@@ -71,7 +71,7 @@
   padding: 0 !important;
   position: sticky;
   top: -1px;
-  z-index: 999;
+  z-index: 79;
   vertical-align: middle;
 }
 
